--- a/package.json
+++ b/package.json
@@ -4,13 +4,34 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
-    "vue": "^3.2.41"
+    "@fortawesome/fontawesome-free": "^6.2.0",
+    "axios": "^1.1.3",
+    "bootstrap": "^4.6.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jquery": "^3.6.1",
+    "popper.js": "^1.16.1",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
     "vite": "^3.1.8"
-  }
+  },
+  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/minhtam2001/ct44902_frontend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/minhtam2001/ct44902_frontend/issues"
+  },
+  "homepage": "https://github.com/minhtam2001/ct44902_frontend#readme"
 }
