--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "express": "^4.18.2",
     "jquery": "^3.6.1",
     "popper.js": "^1.16.1",
+    "vee-validate": "^4.7.1",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
